force-app/main/default/objects/Unit_Number_Structure__c/Unit_Number_Structure__c.object-meta.xml
<CustomObject>
    <label>Unit Number Structure</label>
    <nameField>
        <label>Unit Number Structure Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Unit Number Structures</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>