force-app/main/default/objects/Unit_Number_Structure__c/fields/Delimiter__c.field-meta.xml
<CustomField>
    <fullName>Delimiter__c</fullName>
    <label>Delimiter</label>
    <length>2</length>
    <type>Text</type>
</CustomField>