force-app/main/default/objects/Unit_Number_Structure__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Unit Number Structures</relationshipLabel>
    <relationshipName>Unit_Number_Structures</relationshipName>
    <type>Lookup</type>
</CustomField>