force-app/main/default/objects/Unit_Number_Structure__c/fields/Sorting_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sorting_Sequence__c</fullName>
    <label>Sorting Sequence</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Numeric</fullName>
            </value>
            <value>
                <fullName>AlphaNumeric</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>