force-app/main/default/objects/Unit_Number_Structure__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PROJECT</fullName>
            </value>
            <value>
                <fullName>TOWER</fullName>
            </value>
            <value>
                <fullName>FLOOR</fullName>
            </value>
            <value>
                <fullName>UNIT NO.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>