force-app/main/default/objects/Unit_Number_Structure__c/validationRules/Maximum_Length_of_Unit_Structure.validationRule-meta.xml
<ValidationRule>
    <fullName>Maximum_Length_of_Unit_Structure</fullName>
    <active>true</active>
    <errorConditionFormula>OR(Maximum_Length__c  &gt; 5,Maximum_Length__c  &lt; 1)</errorConditionFormula>
    <errorDisplayField>Maximum_Length__c</errorDisplayField>
    <errorMessage>Maximum length cannot be greater than 5 OR Less than 1</errorMessage>
</ValidationRule>