force-app/main/default/objects/Unit_Number_Structure__c/validationRules/Sequence_Number_Value.validationRule-meta.xml
<ValidationRule>
    <fullName>Sequence_Number_Value</fullName>
    <active>true</active>
    <errorConditionFormula>Sequence_No__c &lt;1 ||  Sequence_No__c &gt;=6</errorConditionFormula>
    <errorDisplayField>Sequence_No__c</errorDisplayField>
    <errorMessage>Sequence Number value Can only be between 1-5</errorMessage>
</ValidationRule>